removing count as required metric
Signed-off-by: Bharathwaj G <bharath78910@gmail.com>