@@ -68,7 +68,7 @@ public class StarTreeMapperTests extends MapperTestCase {
             assertEquals("size", starTreeFieldType.getMetrics().get(0).getField());
 
             // Assert COUNT and SUM gets added when AVG is defined
-            List<MetricStat> expectedMetrics = Arrays.asList(MetricStat.COUNT, MetricStat.AVG, MetricStat.SUM);
+            List<MetricStat> expectedMetrics = Arrays.asList(MetricStat.AVG, MetricStat.COUNT, MetricStat.SUM);
             assertEquals(expectedMetrics, starTreeFieldType.getMetrics().get(0).getMetrics());
             assertEquals(100, starTreeFieldType.getStarTreeConfig().maxLeafDocs());
             assertEquals(StarTreeFieldConfiguration.StarTreeBuildMode.OFF_HEAP, starTreeFieldType.getStarTreeConfig().getBuildMode());
@@ -95,9 +95,36 @@ public class StarTreeMapperTests extends MapperTestCase {
             assertEquals("status", starTreeFieldType.getDimensions().get(1).getField());
             assertEquals("size", starTreeFieldType.getMetrics().get(0).getField());
 
-            // Assert COUNT gets added for any metric field
             // Assert AVG gets added when both of its base metrics is already present
-            List<MetricStat> expectedMetrics = Arrays.asList(MetricStat.COUNT, MetricStat.SUM, MetricStat.AVG);
+            List<MetricStat> expectedMetrics = List.of(MetricStat.SUM);
+            assertEquals(expectedMetrics, starTreeFieldType.getMetrics().get(0).getMetrics());
+            assertEquals(100, starTreeFieldType.getStarTreeConfig().maxLeafDocs());
+            assertEquals(StarTreeFieldConfiguration.StarTreeBuildMode.OFF_HEAP, starTreeFieldType.getStarTreeConfig().getBuildMode());
+            assertEquals(
+                new HashSet<>(Arrays.asList("@timestamp", "status")),
+                starTreeFieldType.getStarTreeConfig().getSkipStarNodeCreationInDims()
+            );
+        }
+    }
+
+    public void testMetricsWithCountAndSum() throws IOException {
+        MapperService mapperService = createMapperService(getExpandedMappingWithSumAndCount("status", "size"));
+        Set<CompositeMappedFieldType> compositeFieldTypes = mapperService.getCompositeFieldTypes();
+        for (CompositeMappedFieldType type : compositeFieldTypes) {
+            StarTreeMapper.StarTreeFieldType starTreeFieldType = (StarTreeMapper.StarTreeFieldType) type;
+            assertEquals("@timestamp", starTreeFieldType.getDimensions().get(0).getField());
+            assertTrue(starTreeFieldType.getDimensions().get(0) instanceof DateDimension);
+            DateDimension dateDim = (DateDimension) starTreeFieldType.getDimensions().get(0);
+            List<Rounding.DateTimeUnit> expectedTimeUnits = Arrays.asList(
+                Rounding.DateTimeUnit.DAY_OF_MONTH,
+                Rounding.DateTimeUnit.MONTH_OF_YEAR
+            );
+            assertEquals(expectedTimeUnits, dateDim.getIntervals());
+            assertEquals("status", starTreeFieldType.getDimensions().get(1).getField());
+            assertEquals("size", starTreeFieldType.getMetrics().get(0).getField());
+
+            // Assert AVG gets added when both of its base metrics is already present
+            List<MetricStat> expectedMetrics = List.of(MetricStat.SUM, MetricStat.COUNT, MetricStat.AVG);
             assertEquals(expectedMetrics, starTreeFieldType.getMetrics().get(0).getMetrics());
             assertEquals(100, starTreeFieldType.getStarTreeConfig().maxLeafDocs());
             assertEquals(StarTreeFieldConfiguration.StarTreeBuildMode.OFF_HEAP, starTreeFieldType.getStarTreeConfig().getBuildMode());
@@ -258,7 +285,6 @@ public class StarTreeMapperTests extends MapperTestCase {
         assertEquals(MetricStat.SUM, MetricStat.fromTypeName("sum"));
         assertEquals(MetricStat.AVG, MetricStat.fromTypeName("avg"));
 
-        assertEquals(Set.of(MetricStat.COUNT), MetricStat.getRequiredMetrics());
         assertEquals(List.of(MetricStat.COUNT, MetricStat.SUM), MetricStat.AVG.getBaseMetrics());
 
         IllegalArgumentException ex = expectThrows(IllegalArgumentException.class, () -> MetricStat.fromTypeName("invalid"));
@@ -479,6 +505,57 @@ public class StarTreeMapperTests extends MapperTestCase {
             b.field("name", metric);
             b.startArray("stats");
             b.value("sum");
+            b.endArray();
+            b.endObject();
+            b.endArray();
+            b.endObject();
+            b.endObject();
+            b.endObject();
+            b.startObject("properties");
+            b.startObject("@timestamp");
+            b.field("type", "date");
+            b.endObject();
+            b.startObject("status");
+            b.field("type", "integer");
+            b.endObject();
+            b.startObject("size");
+            b.field("type", "integer");
+            b.endObject();
+            b.endObject();
+        });
+    }
+
+    private XContentBuilder getExpandedMappingWithSumAndCount(String dim, String metric) throws IOException {
+        return topMapping(b -> {
+            b.startObject("composite");
+            b.startObject("startree");
+            b.field("type", "star_tree");
+            b.startObject("config");
+            b.field("max_leaf_docs", 100);
+            b.startArray("skip_star_node_creation_for_dimensions");
+            {
+                b.value("@timestamp");
+                b.value("status");
+            }
+            b.endArray();
+            b.startArray("ordered_dimensions");
+            b.startObject();
+            b.field("name", "@timestamp");
+            b.startArray("calendar_intervals");
+            b.value("day");
+            b.value("month");
+            b.endArray();
+            b.endObject();
+            b.startObject();
+            b.field("name", dim);
+            b.endObject();
+            b.endArray();
+            b.startArray("metrics");
+            b.startObject();
+            b.field("name", metric);
+            b.startArray("stats");
+            b.value("sum");
+            b.value("count");
             b.endArray();
             b.endObject();
             b.endArray();
